--- a/ILI_Lithne/distribution/ILI_Lithne-1/index.html
+++ b/ILI_Lithne/distribution/ILI_Lithne-1/index.html
@@ -42,7 +42,7 @@
 			<h2>ILI_Lithne</h2>
 			<p>
 			A library by <a href="http://www.remcomagielse.com">Remco Magielse</a> for the <a href="http://www.processing.org" target="_blank">Processing</a> programming environment.<br>
-			Last update, 06/20/2013.
+			Last update, 07/31/2013.
 			</p>
 			<p>
 			This library interfaces with the Lithne nodes and facilitates development of Lighting networks.<br>
@@ -78,7 +78,7 @@
 			<h2>Examples</h2>
 			<p>Find a list of examples in the current distribution of ILI_Lithne, or have a look at them by following the links below.</p>
 			<ul>
-			<li><a href="examples/01_Lithne_Basics/01_Lithne_Basics.pde">01_Lithne_Basics</a></li> <li><a href="examples/02_Lithne_Message_Tester/02_Lithne_Message_Tester.pde">02_Lithne_Message_Tester</a></li> <li><a href="examples/Example_Message_01_Basics/Example_Message_01_Basics.pde">Example_Message_01_Basics</a></li> 
+			<li><a href="examples/Example_Message_01_Basics/Example_Message_01_Basics.pde">Example_Message_01_Basics</a></li> <li><a href="examples/Lithne_Basics/Lithne_Basics.pde">Lithne_Basics</a></li> <li><a href="examples/Lithne_Message_Tester/Lithne_Message_Tester.pde">Lithne_Message_Tester</a></li> 
 			</ul>
 			</div>
 			
